<resources>
    <string name="app_name">Application</string>
    <string name="hitesh">Hitesh</string>
    <string name="id_17xj1a0517">ID: 17XJ1A0517</string>
    <string name="mobile_no_9652624404">Mobile No: 9652624404</string>
    <string name="description_yonex_xj1">Description: Yonex XJ1</string>
    <string name="send_request">Send Request</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
