<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/cardview_light_background"
    android:padding="10dp"
    android:scrollbarStyle="insideOverlay"
    android:layout_height="match_parent"
    tools:context=".BadmintonGive">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/bg_p_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/hitesh"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bg_p_sid1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_17xj1a0517"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/bg_p_mob1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no_9652624404"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/bg_p_des1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_yonex_xj1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/bg_p_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_request"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/bg_p_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Harshith. V"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bg_p_sid2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ID:17XJ1A0549"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/bg_p_mob2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mobile No: 7892820011"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/bg_p_des2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description:Kamachi Yo"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/bg_p_button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_request"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>